--- a/dashboard/web/home.html
+++ b/dashboard/web/home.html
@@ -6,13 +6,23 @@
     <title>Ark Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      /* Additional styles if needed */
+      p.txid a {
+        text-decoration: underline;
+      }
     </style>
   </head>
   <body class="bg-white text-gray-800 p-10">
     <div class="grid grid-cols-2 gap-4">
-      <div class="flex flex-col gap-4">{{template "balance.html" .}} {{template "roundDetail.html" .}}</div>
-      <div class="flex flex-col gap-4">{{template "roundsList.html" .}}</div>
+      <div class="flex flex-col gap-4">
+        {{template "_balance.html" .}} {{template "_nextSweep.html" .}} {{template "_roundDetails.html" .}}
+      </div>
+      <div class="flex flex-col gap-4">{{template "_roundsList.html" .}}</div>
+      {{template "_jsUtils.html" .}}
     </div>
   </body>
+  <script>
+    window.addEventListener('load', () => {
+      if (!getCredentials()) redirect('/login')
+    })
+  </script>
 </html>
