--- a/dashboard/web/login.html
+++ b/dashboard/web/login.html
@@ -9,82 +9,48 @@
       /* Additional styles if needed */
     </style>
   </head>
-  <body class="bg-white text-gray-800">
-    <div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-      <div class="max-w-md w-full space-y-8">
-        <div>
-          <img
-            class="mx-auto h-12 w-auto"
-            src="https://unsplash.it/100/100"
-            alt="Banco Logo"
-            style="border-radius: 50%" />
-          <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Sign in to your account</h2>
+  <body class="bg-white text-gray-600 p-10">
+    <div class="min-h-screen flex items-center justify-center">
+      <form class="flex flex-col gap-4">
+        <p id="error" class="text-red-600 text-center min-h-6 font-semibold" />
+        <div class="flex flex-col">
+          <label for="email-address" class="text-sm">Username</label>
+          <input id="username" autocomplete="username" required />
         </div>
-        <form class="mt-8 space-y-6" action="#" method="POST">
-          <input type="hidden" name="remember" value="true" />
-          <div class="rounded-md shadow-sm -space-y-px">
-            <div>
-              <label for="email-address" class="sr-only">Email address</label>
-              <input
-                id="email-address"
-                name="email"
-                type="email"
-                autocomplete="email"
-                required
-                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                placeholder="Email" />
-            </div>
-            <div>
-              <label for="password" class="sr-only">Password</label>
-              <input
-                id="password"
-                name="password"
-                type="password"
-                autocomplete="current-password"
-                required
-                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                placeholder="Password" />
-            </div>
-          </div>
-
-          <div class="flex items-center justify-between">
-            <div class="flex items-center">
-              <input
-                id="remember-me"
-                name="remember-me"
-                type="checkbox"
-                class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded" />
-              <label for="remember-me" class="ml-2 block text-sm text-gray-900"> Remember me </label>
-            </div>
-
-            <div class="text-sm">
-              <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500"> Forgot your password? </a>
-            </div>
-          </div>
-
-          <div>
-            <button
-              type="submit"
-              class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Sign in
-            </button>
-          </div>
-        </form>
-        <div class="relative">
-          <div class="absolute inset-0 flex items-center">
-            <div class="w-full border-t border-gray-300"></div>
-          </div>
-          <div class="relative flex justify-center text-sm">
-            <span class="px-2 bg-white text-gray-500"> or </span>
-          </div>
+        <div class="flex flex-col">
+          <label for="password" class="text-sm">Password</label>
+          <input id="password" type="password" autocomplete="current-password" required />
         </div>
-        <div>
-          <button
-            class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-            Create a new account
-          </button>
-        </div>
-      </div>
+        <button id="signIn" class="w-full py-2 px-4 rounded-md text-white bg-indigo-600">Sign in</button>
+      </form>
     </div>
+    {{template "_jsUtils.html" .}}
   </body>
+  <script>
+    const setError = (e) => (document.querySelector('#error').innerText = e)
+
+    window.addEventListener('load', () => {
+      document.querySelector('#username').addEventListener('focus', () => setError(''))
+      document.querySelector('#password').addEventListener('focus', () => setError(''))
+      document.querySelector('#signIn').addEventListener('click', (e) => {
+        e.preventDefault()
+        const credentials = {
+          username: document.querySelector('#username').value,
+          password: document.querySelector('#password').value,
+        }
+        getApi('/balance')
+          .then((res) => {
+            if (res.ok) {
+              setCredentials(credentials)
+              redirect('/')
+            } else {
+              setError('Invalid credentials')
+            }
+          })
+          .catch((error) => {
+            setError(error)
+          })
+      })
+    })
+  </script>
 </html>
