make it responsive

--- a/dashboard/web/home.html
+++ b/dashboard/web/home.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body class="bg-white text-gray-800 p-10">
-    <div class="grid grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <div class="flex flex-col gap-4">
         {{template "_balance.html" .}} {{template "_nextSweep.html" .}} {{template "_roundDetails.html" .}}
       </div>
