Add time selector to roundsList Fix hash links to be underlined

--- a/dashboard/web/_jsUtils.html
+++ b/dashboard/web/_jsUtils.html
@@ -6,7 +6,7 @@
 
   const prettyHash = (hash) => {
     const text = prettyLongText(hash)
-    return `<a href="/?${hash}">${text}</a>`
+    return `<a href="/?${hash}" class="underline">${text}</a>`
   }
 
   const prettyNumber = (num, maximumFractionDigits = 8) => {
@@ -51,6 +51,29 @@
       text += `${delta}s`
     }
     return text
+  }
+
+  const toUnixtime = (text) => {
+    const now = Math.floor(Date.now() / 1000)
+    if (text === 'now') return now
+
+    const toSeconds = (letter) => {
+      if (letter === 's') return 1
+      if (letter === 'm') return 60
+      if (letter === 'h') return 60 * 60
+      if (letter === 'd') return 60 * 60 * 24
+      if (letter === 'w') return 60 * 60 * 24 * 7
+      return 0
+    }
+
+    let delta = 0
+    const match = text.match(/(\d+\w)/g)
+    match.map((label) => {
+      const [all, num, letter] = label.match(/(\d+)(\w)/)
+      delta += Number(num) * toSeconds(letter)
+    })
+
+    return now - delta
   }
 
   const mockData = {
