--- a/dashboard/web/_timeSelect.html
+++ b/dashboard/web/_timeSelect.html
@@ -1,19 +1,17 @@
-<div class="bg-gray-100 border border-gray-300 mt-10 p-4">
+<div class="bg-gray-100 border border-gray-300 mb-6 px-3 py-1">
   <div class="flex justify-between items-center">
     <div>
       <p class="text-sm">Time ago</p>
-      <input id="selectTime" class="border border-gray-300 p-2" />
-      <p class="text-gray-400 text-xs">Ex: now, 1w, 1h21m42s</p>
+      <input id="selectTime" class="border border-gray-300 px-2 py-1" />
+      <p class="text-gray-400 text-xs pb-1">Ex: now, 1w, 1h21m42s</p>
     </div>
     <p class="text-sm">or</p>
     <div>
       <p class="text-sm">Unix time</p>
-      <input id="selectUnix" class="border border-gray-300 p-2" />
-      <p class="text-gray-400 text-xs">Ex: 1717768339</p>
+      <input id="selectUnix" class="border border-gray-300 px-2 py-1" />
+      <p class="text-gray-400 text-xs pb-1">Ex: 1717768339</p>
     </div>
-    <div>
-      <button id="selectSearch" class="bg-black text-white rounded-md p-2">Search</button>
-    </div>
+    <button id="selectSearch" class="bg-black border border-black text-white px-2 py-1">Search</button>
   </div>
 </div>
 
