--- a/dashboard/web/home.html
+++ b/dashboard/web/home.html
@@ -6,13 +6,13 @@
     <title>Ark Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
+  {{template "_jsUtils.html" .}}
   <body class="bg-white text-gray-800 p-10">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+    <div id="container" class="grid grid-cols-1 md:grid-cols-2 gap-4 hidden">
       <div class="flex flex-col gap-4">
         {{template "_balance.html" .}} {{template "_nextSweep.html" .}} {{template "_roundDetails.html" .}}
       </div>
       <div class="flex flex-col gap-4">{{template "_roundsList.html" .}}</div>
-      {{template "_jsUtils.html" .}}
     </div>
   </body>
   <script>
