--- a/dashboard/web/home.html
+++ b/dashboard/web/home.html
@@ -8,7 +8,7 @@
   </head>
   {{template "_jsUtils.html" .}}
   <body class="bg-white text-gray-800 p-10">
-    <div id="container" class="grid grid-cols-1 md:grid-cols-2 gap-4 hidden">
+    <div id="container" class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <div class="flex flex-col gap-4">
         {{template "_balance.html" .}} {{template "_nextSweep.html" .}} {{template "_roundDetails.html" .}}
       </div>
