--- a/pkg/client-sdk/example/wasm/index.html
+++ b/pkg/client-sdk/example/wasm/index.html
@@ -16,88 +16,117 @@
             logArea.scrollTop = logArea.scrollHeight;
         }
 
-        async function connect() {
+        async function conn() {
             try {
-                await connectWallet();
+                await connect();
                 logMessage("Connected to ASP");
-                await printConfigInfo();
+                await config();
             } catch (err) {
-                logMessage("Error: " + err.message);
+                logMessage("Connect error: " + err.message);
             }
         }
 
-        async function onboard() {
+        async function receiveAddresses() {
             try {
-                await onboardWallet();
-                logMessage("Onboarded");
+                const addresses = await receive();
+                logMessage("Offchain address: " + addresses.offchainAddr);
+                logMessage("Onchain address: " + addresses.onchainAddr);
+                logMessage("If in regtest faucet onchain address: " + addresses.onchainAddr);
             } catch (err) {
-                logMessage("Error: " + err.message);
+                logMessage("Receive error: " + err.message);
             }
         }
 
-        async function balance() {
-            try {
-                const balance = await getBalance();
-                logMessage("Balance: " + JSON.stringify(balance));
-            } catch (err) {
-                logMessage("Error: " + err.message);
-            }
+        async function getBalance() {
+            const bal = await balance(false);
+            logMessage("Onchain balance: " + bal.onchain_balance)
+            logMessage("Offchain balance: " + bal.offchain_balance)
         }
+
 
         async function send() {
             try {
-                const txID = await sendMoney();
-                logMessage("Money sent, txID: " + txID);
-                const balance = await getBalance();
-                logMessage("Balance after send: " + JSON.stringify(balance));
+                const address = document.getElementById("sendAddress").value;
+                if (!address) {
+                    logMessage("Send error: Address is required");
+                    return;
+                }
+
+                const amountStr = document.getElementById("amountToSend").value;
+                if (!amountStr) {
+                    logMessage("Send error: Amount is required");
+                    return;
+                }
+                const amount = parseInt(amountStr, 10);
+
+                const txID = await sendOffChain(false, [{ To: address, Amount: amount }]);
+                logMessage("Sent money with tx ID: " + txID);
             } catch (err) {
-                logMessage("Error: " + err.message);
+                logMessage("Send error: " + err.message);
             }
         }
 
-        async function printConfigInfo() {
+        async function config() {
             try {
                 const aspUrl = await getAspUrl();
                 logMessage("ASP URL: " + aspUrl);
+
                 const aspPubKeyHex = await getAspPubKeyHex();
-                logMessage("ASP Public Key Hex: " + aspPubKeyHex);
+                logMessage("ASP PubKey Hex: " + aspPubKeyHex);
+
                 const transportProtocol = await getTransportProtocol();
                 logMessage("Transport Protocol: " + transportProtocol);
+
                 const explorerUrl = await getExplorerUrl();
                 logMessage("Explorer URL: " + explorerUrl);
+
                 const network = await getNetwork();
                 logMessage("Network: " + network);
             } catch (err) {
-                logMessage("Error: " + err.message);
+                logMessage("Config error: " + err.message);
+            }
+        }
+
+        async function board() {
+            logMessage("Board button clicked");
+            const amountStr = document.getElementById("amount").value;
+            const amount = parseInt(amountStr, 10);
+            logMessage("Amount provided: " + amount);
+            try {
+                const txID = await onboard(amount);
+                logMessage("Onboarded with amount: " + amount + " and txID: " + txID + ", if in regtest mine a block");
+            } catch (err) {
+                logMessage("Board error: " + err.message);
             }
         }
     </script>
-    <style>
-        .container {
-            padding: 20px;
-        }
-        .buttons {
-            margin-bottom: 20px;
-        }
-        .buttons button {
-            margin-right: 10px;
-        }
-        .logArea {
-            width: 100%;
-            height: 300px;
-        }
-    </style>
 </head>
 <body>
-<div class="container">
-    <h2>Ark SDK Wallet</h2>
-    <div class="buttons">
-        <button onclick="connect()">Connect</button>
-        <button onclick="onboard()">Onboard</button>
-        <button onclick="balance()">Balance</button>
-        <button onclick="send()">Send</button>
+<h1>Ark SDK WASM Example</h1>
+<div>
+    <h2>Wallet</h2>
+    <div>
+        <button onclick="conn()">Connect</button>
     </div>
-    <textarea id="logArea" class="logArea" readonly></textarea>
+    <div>
+        <button onclick="receiveAddresses()">Receive</button>
+    </div>
+    <div>
+        <button onclick="getBalance()">Balance</button>
+    </div>
+    <div>
+        <button onclick="board()">Onboard</button>
+        <input type="text" id="amount" placeholder="Amount">
+    </div>
+    <div>
+        <button onclick="send()">Send</button>
+        <input type="text" id="sendAddress" placeholder="Offchain Address">
+        <input type="text" id="amountToSend" placeholder="Amount">
+    </div>
+    <div>
+        <button onclick="config()">Config</button>
+    </div>
 </div>
+<textarea id="logArea" rows="20" cols="80" readonly></textarea>
 </body>
 </html>
