--- a/pkg/client-sdk/example/wasm/index.html
+++ b/pkg/client-sdk/example/wasm/index.html
@@ -20,8 +20,6 @@
             try {
                 const walletType = "singlekey"
                 const clientType = "rest"
-                const network = "liquidregtest"
-                const explorerUrl = "http://localhost:3001"
                 const privateKey = document.getElementById("prvkey").value;
                 const password = document.getElementById("i_password").value;
                 if (!password) {
@@ -33,7 +31,7 @@
                     logMessage("Init error: asp url is required");
                     return;
                 }
-                await init(walletType, clientType, network, aspUrl, explorerUrl, password, privateKey);
+                await init(walletType, clientType, aspUrl, privateKey, password);
                 logMessage("wallet initialized and connected to ASP");
                 await config();
             } catch (err) {
@@ -78,10 +76,13 @@
                 }
                 const amount = parseInt(amountStr, 10);
 
-                const txID = await sendOffChain(false, [{ To: address, Amount: amount }], password);
+                await unlock(password);
+                const txID = await sendOffChain(false, [{ To: address, Amount: amount }]);
                 logMessage("Sent money with tx ID: " + txID);
             } catch (err) {
                 logMessage("Send error: " + err.message);
+            } finally {
+                await lock(password);
             }
         }
 
@@ -98,12 +99,6 @@
 
                 const clientType = await getClientType();
                 logMessage("Client Type: " + clientType);
-
-                const explorerUrl = await getExplorerUrl();
-                logMessage("Explorer URL: " + explorerUrl);
-
-                const network = await getNetwork();
-                logMessage("Network: " + network);
 
                 const roundLifetime = await getRoundLifetime();
                 logMessage("Round Lifetime: " + roundLifetime);
@@ -128,12 +123,17 @@
             }
 
             try {
+                console.log("unlocking...");
+                await unlock(password);
                 console.log(amount, password);
-                const txID = await onboard(amount, password);
+                const txID = await onboard(amount);
                 logMessage("Onboarded with amount: " + amount + " and txID: " + txID + ", if in regtest mine a block");
             } catch (err) {
                 logMessage("Onboard error: " + err.message);
+            } finally {
+                await lock(password);
             }
+
         }
     </script>
 </head>
