Covenant-less ark sdk (#225)
* Add method to compute vtxo taproot script

* Drop debug logs

* Refactor client:
* Remove dep from stubs in interface
* Remove redeem branch, out of scope (moved to ark client)

* Add example for covenant and covenantless sdk

* Simplify explorer - No need for bitcoin and liquid impls

* Refactor wallet:
* wallet struct for common operations (create, lock/unlock, getType, isLocked)
* liquidWallet struct for liquid operations (derive/get addresses, sign tx)
* bitcoinWallet struct for bitcoin operations (derive/get addresses, sign tx)

* Update utils:
* drop methods to parse tree (moved to ark client)
* add methods for encryption, network parsing, key generation
* add methods for covenant/covenantless redeem branches (move to common?)

* Add support for covenantless sdk:
* move interface to dedicated file
* arkCLient struct for common operations (Init, lock/unlock, get config data, receive)
* covenantArkClient struct for covenant operations (onboard, balance, send, redeem)
* covenantlessArkClient struct for covenantless operations (onboard, balance, send, redeem)

* Fix wasm

* Fixes

* Make explorer use utils.Cache

* Renamings

* Lint

* Fix e2e tests

* Fix e2e test

--- a/pkg/client-sdk/example/covenant/wasm/index.html
+++ b/pkg/client-sdk/example/covenant/wasm/index.html
@@ -18,6 +18,7 @@
 
         async function initWallet() {
             try {
+                const chain = "liquid";
                 const walletType = "singlekey"
                 const clientType = "rest"
                 const privateKey = document.getElementById("prvkey").value;
@@ -31,7 +32,7 @@
                     logMessage("Init error: asp url is required");
                     return;
                 }
-                await init(walletType, clientType, aspUrl, privateKey, password);
+                await init(walletType, clientType, aspUrl, privateKey, password, chain);
                 logMessage("wallet initialized and connected to ASP");
                 await config();
             } catch (err) {
@@ -127,6 +128,7 @@
                 console.log("unlocking...");
                 await unlock(password);
                 console.log(amount, password);
+                console.log("onboarding...");
                 const txID = await onboard(amount);
                 logMessage("Onboarded with amount: " + amount + " and txID: " + txID + ", if in regtest mine a block");
             } catch (err) {
